@@ -1,3 +1,7 @@
+svn repository
+==============
+* error checking in front-end for non-positive-definite observed covariance matrices
+
 Release 1.0.6-1581 (March 10, 2011)
 ===================================
 * Bug fix corner case in sorting data with definition variables
